--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UFOs</title>
 
-    <link
+<link
     rel="stylesheet"
     href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -15,13 +15,13 @@
   <link rel="stylesheet" href="static/css/style.css">
 
 </head>
-<body>
+<body class="bg-dark">
     <div class="wrapper">
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
             <a class="navbar-brand" href="index.html">UFO Sightings</a>
         </nav>
     <div class="jumbotron">
-        <h1>The Truth Is Out There</h1>
+        <h1 class="display-4">The Truth Is Out There</h1>
     </div>
     <div class="container-fluid">
         <div class="row">
@@ -36,15 +36,28 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-3">
-                <form>
+                <form class = "bg-dark">
                     <p>Filter Search</p>
-                    <ul class="list-group">
-                        <li class="list-group-item">
+                    <ul class="list-group bg-dark" id="filters">
+                        <li class="filter list-group-item bg-dark">
                             <label for="date">Enter Date</label>
                             <input type="text" placeholder="1/10/2010" id="datetime" />
                         </li>
-                        <li class="list-group-item">
-                            <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
+                        <li class="filter list-group-item bg-dark">
+                            <label for="city">Enter City</label>
+                            <input type="text" placeholder="roswell" id="city" />
+                        </li>
+                        <li class="filterlist-group-item bg-dark">
+                            <label for="state">Enter State</label>
+                            <input type="text" placeholder="ca" id="state" />
+                        </li>
+                        <li class="filter list-group-item bg-dark">
+                            <label for="country">Enter Country</label>
+                            <input type="text" placeholder="us" id="country" />
+                        </li>
+                        <li class="filter list-group-item bg-dark">
+                            <label for="shape">Enter Shape</label>
+                            <input type="text" placeholder="circle" id="shape" />
                         </li>
                     </ul>
                 </form>
